# simple-sendgrid

./: simple-sendgrid.cabal  stack.yaml
src/Network/: SendGrid.hs
src/Network/SendGrid/: Contacts.hs  Types.hs
