name:                simple-sendgrid
version:             0.4.3
synopsis:            Just sends emails via sendgrid
description:         Just sends emails via sendgrid
homepage:            https://github.com/ralphmorton/simple-sendgrid#readme
license:             BSD3
license-file:        LICENSE
author:              Ralph Morton
maintainer:          ralphmorton@gmail.com
copyright:           Ralph Morton
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.SendGrid
                     , Network.SendGrid.Contacts
                     , Network.SendGrid.Types
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.1.3.1
                     , bytestring >= 0.10.6.0
                     , text >= 1.2.2.1
                     , lens >= 4.13
                     , containers >= 0.5.6.2
                     , aeson >= 0.9.0.1
                     , http-client >= 0.4.27.1
                     , nano-http >= 0.1.0
                     , persistent >= 2.2.4.1
                     , lens-aeson >= 1.0.0.5
                     , case-insensitive >= 1.0
                     , base64-bytestring >= 1.0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ralphmorton/simple-sendgrid
