name:                simple-sendgrid
version:             0.4.4
synopsis:            Just sends emails via sendgrid
description:         Just sends emails via sendgrid
homepage:            https://github.com/ralphmorton/simple-sendgrid#readme
license:             BSD3
license-file:        LICENSE
author:              Ralph Morton
maintainer:          ralphmorton@gmail.com
copyright:           Ralph Morton
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.SendGrid
                     , Network.SendGrid.Contacts
                     , Network.SendGrid.Types
  build-depends:       base
                     , mtl
                     , bytestring
                     , text
                     , lens
                     , containers
                     , aeson
                     , http-client
                     , nano-http
                     , persistent
                     , lens-aeson
                     , case-insensitive
                     , base64-bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ralphmorton/simple-sendgrid
